--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,7 +11,7 @@
 	                  android:label="@string/app_name">	            
 	        </activity>
 	        
-	        <activity android:name="ListTrainingsView" android:configChanges="keyboardHidden|orientation">	            
+	        <activity android:name=".view.ListTrainingsView" android:configChanges="keyboardHidden|orientation">
 	            <!-- This is the first Action to be shown when it starts -->
 	            <intent-filter>
 	                <action android:name="android.intent.action.MAIN" />
@@ -19,11 +19,11 @@
 	            </intent-filter>	         
 	        </activity>
 
-	        <activity android:name="ListWorkoutsForTrainingView"></activity>	        
-	        <activity android:name="AddTrainingView"></activity>
-	        <activity android:name="EditTrainingView"></activity>	        
-	        <activity android:name="AddWorkoutsView"></activity>	        
-	        <activity android:name="RunTrainingWorkoutsView" android:configChanges="keyboardHidden|orientation"></activity>
+	        <activity android:name=".view.ListWorkoutsForTrainingView"></activity>
+	        <activity android:name=".view.AddTrainingView"></activity>
+	        <activity android:name=".view.EditTrainingView"></activity>
+	        <activity android:name=".view.AddWorkoutsView"></activity>
+	        <activity android:name=".view.RunTrainingWorkoutsView" android:configChanges="keyboardHidden|orientation"></activity>
 	        
 	    </application>
 
